# mouthpad-usb

./: .dockerignore  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  CMakeUserPresets.json  Dockerfile  Kconfig  LICENSE  Makefile  README.md  agents.md  convert_logo.py  mouthpad.descriptor  prj.conf  test-ci-build.sh  test_direct_uart.c  west.yml  zephyr_workspace_setup.md
.github/workflows/: build-esp32.yml  build-nrf.yml  build-nrf52.yml  build.yml  ci.yml  release.yml
3dprint/: BOM.md  mouthpad_usb.3mf  mouthpad_usb.f3d  mouthpad_usb.step  mouthpad_usb_0.2mm_PLA_MK3S_40m.gcode  mouthpad_usb_bottom.stl  mouthpad_usb_inner.stl  mouthpad_usb_outer.stl  mouthpad_usb_top.stl
app/: CMakeLists.txt  README.md  pm_static_adafruit_feather_nrf52840.yml  pm_static_nrf52840dongle_nrf52840.yml  prj.conf  usbd_next.overlay  usbd_next_prj.conf
app/boards/: adafruit_feather_nrf52840.conf  adafruit_feather_nrf52840.overlay  adafruit_feather_nrf52840_pin_test.overlay  nrf52840dongle_nrf52840.april.overlay  nrf52840dongle_nrf52840.conf  nrf52840dongle_nrf52840.overlay  xiao_ble.overlay
app/src/: augmental_logo.h  ble.c  ble_bas.c  ble_bas.h  ble_central.c  ble_central.h  ble_hid.c  ble_hid.h  ble_multi_conn.c  ble_multi_conn.h  ble_nus_client.c  ble_nus_client.h  ble_nus_multi_client.c  ble_nus_multi_client.h  ble_transport.c  ble_transport.h  button.c  button.h  buzzer.c  even_g1.c  even_g1.h  even_g1_diagnostic.c  leds.c  leds.h  main.c  oled_display.c  oled_display.h  usb_cdc.c  usb_cdc.h  usb_hid.c  usb_hid.h
app/src/mouthpad-proto/src/C/: MouthpadUsb.pb.c  MouthpadUsb.pb.h
central_uart/: prj.conf
central_uart/src/: ble_central.c  ble_nus_client.c  ble_transport.h  main.c  usb_cdc.c  usb_cdc.h
docs/: BUILD_METHODS.md  DEVICE_SELECTION_GUIDE.md  EVEN_G1.md  EVEN_G1_BITMAP_PROTOCOL.md  EVEN_G1_plan.md  MOUTHPAD_DISTRIBUTION_GUIDE.md  NRF_WORKSPACE_SETUP.md  RAYTAC_DONGLE.md
esp/: CMakeLists.txt  Makefile  README.md  sdkconfig  sdkconfig.board.lilygo  sdkconfig.board.xiao  sdkconfig.defaults
esp/main/: CMakeLists.txt  Kconfig.projbuild  ble_bas.c  ble_bas.h  ble_bonds.c  ble_central.c  ble_central.h  ble_dis.c  ble_dis.h  ble_nus.c  ble_nus.h  board_config.h  button.c  button.h  idf_component.yml  leds.c  leds.h  main.c  main.h  packet_framing.c  packet_framing.h  relay_protocol.c  relay_protocol.h  transport_uart.c  usb_cdc.c  usb_cdc.h  usb_dfu.c  usb_dfu.h  usb_hid.c
esp/main/mouthpad-proto/src/C/: MouthpadRelay.pb.c  MouthpadRelay.pb.h
esp32/: CMakeLists.txt  Makefile  README.md  README_BOARD_CONFIG.md  sdkconfig  sdkconfig.defaults  sdkconfig.old
esp32/main/: CMakeLists.txt  Kconfig.projbuild  app_config.h  ble_bas.c  ble_bonds.c  ble_bonds.h  ble_central.c  ble_central.h  ble_device_info.c  ble_dis.c  ble_dis.h  ble_hid.c  ble_hid.h  ble_nus.c  ble_nus.h  ble_nus_client.c  ble_nus_client.h  ble_transport.c  ble_transport.h  board_config.h  bootloader_trigger.c  button.c  dev_dfu.c  dev_dfu.h  esp_hid_gap.c  esp_hid_gap.h  leds.c  main.c  nus_cdc_bridge.c  nus_cdc_bridge.h  transport_hid.c  transport_hid.h  transport_uart.h  usb_cdc.c  usb_cdc.h  usb_hid.c  usb_hid.h
ncs/: .gitignore  Makefile  PROTO_CHANGES_NEEDED.md  README.md  cjh-fix-bonding-loop-and-redundant-scan-callbacks-plan.md  cjh-reject-connections-missing-mfr-data-plan.md  docker-compose.yml  sfp-484-dis-manufacturer-model-validation.md  sfp-485-dis-generic-read-callback.md  update_proto.sh
ncs/app/: .gitignore  CMakeLists.txt  Kconfig  README.md  pm_static_nrf52840dongle_nrf52840.yml  pm_static_raytac_mdbt50q_cx_40_nrf52840.yml  prj.conf  run-tests.sh  sysbuild.cmake
ncs/app/boards/: adafruit_feather_nrf52840.conf  adafruit_feather_nrf52840.overlay  aprbrother_nrf52840.conf  aprbrother_nrf52840.overlay  makerdiary_nrf52840mdk.conf  makerdiary_nrf52840mdk.overlay  nordic_nrf52840dongle.conf  nordic_nrf52840dongle.overlay  nrf52840dongle_nrf52840.april.conf  nrf52840dongle_nrf52840.base.conf  nrf52840dongle_nrf52840.conf  nrf52840dongle_nrf52840.nordic.conf  nrf52840dongle_nrf52840.overlay  nrf52840dongle_nrf52840.raytac.conf  raytac_mdbt50q_cx_40.conf  raytac_mdbt50q_cx_40.overlay  raytac_mdbt50q_rx.conf  raytac_mdbt50q_rx.overlay  seeed_xiao_nrf52840.conf  xiao_ble.conf  xiao_ble.overlay
ncs/app/boards/raytac/mdbt50q_cx_40/: Kconfig.raytac_mdbt50q_cx_40  board.c  board.yml  raytac_mdbt50q_cx_40_nrf52840.yaml
ncs/app/src/: ble_bas.c  ble_bas.h  ble_central.c  ble_central.h  ble_dis.c  ble_dis.h  ble_hid.c  ble_hid.h  ble_nus_client.c  ble_transport.c  ble_transport.h  button.c  buzzer.c  buzzer.h  leds.c  leds.h  main.c  oled_display.c  oled_display.h  pselreset_erase.c  sample_usbd_init.c  usb_cdc.c  usb_cdc.h  usb_hid.c
ncs/app/src/mouthpad-proto/nanopb/spm_headers/nanopb/: pb.h
ncs/app/src/mouthpad-proto/src/C/: MouthpadRelay.pb.c  MouthpadRelay.pb.h  MouthpadUsb.pb.c
ncs/app/tests/: README.md
ncs/app/tests/unit/ble_bas/: CMakeLists.txt  README.md  prj.conf  testcase.yaml
ncs/app/tests/unit/ble_bas/src/: test_ble_bas_standalone.c
ncs/bootloaders/: feather_nrf52840_express_bootloader-0.9.2_s140_6.1.1.hex  pca10059_bootloader-0.9.2_s140_6.1.1.hex
ncs/cad/: mouthpad_usb.f3d  mouthpad_usb_bottom.stl
resources/notes/: ADAFRUIT_FEATHER_BOOTLOADER.md  ESP32_NUS_BRIDGE_README.md  MOUTHPAD_DESCRIPTOR.md  REPOSITORY_CLEANUP_GUIDE.md  USB_HID_DUAL_MODE_IMPLEMENTATION.md
resources/scripts/: test-ci-build.sh
samples/ble_hid_usb_hid/: Kconfig  prj.conf  usbd_next.overlay
samples/ble_nus_usb_cdc/: app.overlay  (+2 more)
scripts/: build.sh  clean-build.sh  cleanup.sh  dfu.sh  docker-build-only.sh  docker-build.sh  docker-simple.sh  flash-simple.sh  flash-uf2.sh  flash.sh  monitor.sh  simple-docker-test.sh  simple-ncs-build.sh  test-github-build.sh  test-ncs-build.sh
sdk_config/: sdk_config.h
src/: ble.c  ble.h  ble_config.h  ble_hid_c.c  ble_hid_c.h  ble_uart_c.c  ble_uart_c.h  main.c  usb.c  usb.h  usb_cdc.c  usb_cdc.h  usb_hid.c  usb_hid.h  utils.c  utils.h  virtual_mouse.c  virtual_mouse.h
web/: styles.css
web_interface/: README.md  index.html  script.js  styles.css
(+36 files in other folders)
